[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Lines.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Heart.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/SpawnSpider.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Health.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/FightButton.tscn" type="PackedScene" id=5]

[node name="GameScene" type="Node2D"]
position = Vector2( 75, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="FightScreen" type="Node2D" parent="."]

[node name="Lines" parent="FightScreen" instance=ExtResource( 1 )]
show_behind_parent = true

[node name="Heart" parent="FightScreen" instance=ExtResource( 2 )]
position = Vector2( 281.062, 204.239 )

[node name="SpawnSpider" type="Node2D" parent="FightScreen"]
script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="FightScreen/SpawnSpider"]
autostart = true

[node name="ColorRect" type="ColorRect" parent="FightScreen"]
margin_left = -3.0
margin_top = 14.4293
margin_right = 609.0
margin_bottom = 20.4293
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="FightScreen"]
margin_left = -3.0
margin_top = 392.0
margin_right = 611.0
margin_bottom = 398.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect4" type="ColorRect" parent="FightScreen"]
margin_left = -3.0
margin_top = 20.0
margin_right = 3.0
margin_bottom = 393.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect5" type="ColorRect" parent="FightScreen"]
margin_left = 605.0
margin_top = 14.0
margin_right = 611.0
margin_bottom = 393.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" parent="." instance=ExtResource( 4 )]
margin_left = 2.77203
margin_top = 410.275
margin_right = 2.77203
margin_bottom = 410.275

[node name="FightButton" parent="." instance=ExtResource( 5 )]
margin_left = 66.0904
margin_top = 509.536
margin_right = 66.0904
margin_bottom = 509.536
[connection signal="timeout" from="FightScreen/SpawnSpider/Timer" to="FightScreen/SpawnSpider" method="_on_Timer_timeout"]
